# DermaScope

./: .gitattributes  .gitmodules  CSV_Disctionary_Mapping.py  DOWNLOAD.md  LICENSE  README.md  Single_Test.py  Untitled.ipynb  csv_json.py  main.py  requirements.txt  test.py  testV2.py
AppClassDiagram_ Lucidchart_files/: quickjs-20211008.js.download
Application_Development/: AppClassDiagram_ Lucidchart.html
Application_Development/AppClassDiagram_ Lucidchart_files/: saved_resource(1).html
Application_Development/derm_app/: README.md  firebase.json  package-lock.json  pubspec.yaml
Application_Development/derm_app/dataconnect/: dataconnect.yaml
Application_Development/derm_app/fire-codebase/: main.py
Application_Development/derm_app/lib/: main.dart
Application_Development/derm_app/linux/: CMakeLists.txt
Application_Development/derm_app/test/: widget_test.dart
Application_Development/derm_app/web/: index.html  manifest.json
Derm_project/: CMakeLists.txt  Derm_project.c  build_inst.txt
DermaScope/: CMakeLists.txt  DermaScope.cpp  main.py  pico_sdk_import.cmake
Machine_learning_process/Notebooks/.ipynb_checkpoints/: Exploratory Data Analysis-checkpoint.ipynb
Notebooks/: Data Preprocessing.ipynb  Exploratory Data Analysis.ipynb
Notebooks/.ipynb_checkpoints/: Data Preprocessing-checkpoint.ipynb
Skin-Cancer-Segmentation-master/: Single_Test.py  csv_json.py  mainMB.py  mask_rcnn_moles_0090.h5  mobilenet_skin_classifier.h5  training_log.csv
Skin-Cancer-Segmentation-master/Mask/: model.py
derm_app/android/app/: build.gradle
derm_app/linux/: my_application.cc
derm_app/windows/: CMakeLists.txt
derm_app/windows/runner/: Runner.rc
(+21 files in other folders)
